--- a/FifaScripts/FifaScripts.csproj
+++ b/FifaScripts/FifaScripts.csproj
@@ -7,6 +7,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS8602;CS8603;CS8600,CS8604</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CS8602;CS8603;CS8600,CS8604</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="Data\FifaControls.dll" />
     <None Remove="Data\FifaLibrary19.dll" />
