--- a/FifaScripts/FifaScripts.csproj
+++ b/FifaScripts/FifaScripts.csproj
@@ -8,11 +8,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;CS8602;CS8603;CS8600,CS8604</NoWarn>
+    <NoWarn>1701;1702;CS8602;CS8603;CS8600,CS8604,CS8601</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;CS8602;CS8603;CS8600,CS8604</NoWarn>
+    <NoWarn>1701;1702;CS8602;CS8603;CS8600,CS8604,CS8601</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
