--- a/FIFA23.Scripts.UI/FIFA23.Scripts.UI.csproj
+++ b/FIFA23.Scripts.UI/FIFA23.Scripts.UI.csproj
@@ -3,18 +3,24 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
-    <RootNamespace>Fifa_23_Scripts</RootNamespace>
     <Nullable>enable</Nullable>
-    <UseWindowsForms>true</UseWindowsForms>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <UseWPF>true</UseWPF>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\.editorconfig" Link=".editorconfig" />
+    <None Remove="icons8-script-64.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WPF-UI" Version="2.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FifaScripts\FifaScripts.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="icons8-script-64.png" />
   </ItemGroup>
 
 </Project>
