--- a/FIFA23.Scripts.UI/FIFA23.Scripts.UI.csproj
+++ b/FIFA23.Scripts.UI/FIFA23.Scripts.UI.csproj
@@ -12,7 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="WPF-UI" Version="2.0.3" />
+    <PackageReference Include="Dragablz" Version="0.0.3.234" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.6.1" />
   </ItemGroup>
 
   <ItemGroup>
