Improvments to UI performance. Modifications in the Added Scripts.ScriptSelector

--- a/FIFA23.Scripts.UI/FIFA23.Scripts.UI.csproj
+++ b/FIFA23.Scripts.UI/FIFA23.Scripts.UI.csproj
@@ -7,6 +7,14 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS8602</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CS8602</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <None Remove="icons8-script-64.png" />
   </ItemGroup>
