Added ComboBox showing imported team player names.

--- a/FIFA23.Scripts/FIFA23.Scripts.csproj
+++ b/FIFA23.Scripts/FIFA23.Scripts.csproj
@@ -39,6 +39,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.96.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="FifaControls">
       <HintPath>Data\FifaControls.dll</HintPath>
     </Reference>
